<resources>
    <string name="app_name">NeigHelpIng</string>
    <string name="bar_order">Order</string>
    <string name="bar_takeorder">TakeOrder</string>
    <string name="bar_vieworder">ViewOrder</string>
    <string name="bar_user">User</string>
    <string name="registerTitle">Register As Member</string>
    <string name="registerName">Name: </string>
    <string name="registerNameHints">Enter a name for how to call you~</string>
    <string name="registerPhone">Phone: </string>
    <string name="registerPhoneHints">Enter a phone number to contact you~</string>
    <string name="registerSubmit">Submit</string>
    <string name="welcomeUser">Hello~</string>
    <string name="userPhoneNumber">Your Number: </string>
    <string name="userInforEdit">Edit</string>
    <string name="pick_order_list_item_icon">pick order list item icon</string>
    <string name="orderItemName">order item name</string>
    <string name="orderArea">order Area</string>
    <string name="orderDistance">order Distance</string>
    <string name="ordererName">orderer Name</string>
    <string name="view_order_list_item_icon">view order list item icon</string>
    <string name="orderProcess">order Process State</string>
    <string name="orderPicker">order Picker Name</string>
    <string name="image_for_order">Image for order</string>
    <string name="camera_icon">camera icon</string>
    <string name="take_a_picture_of_the_goods">Take a picture of the goods which you want!</string>
    <string name="room">Room</string>
    <string name="delivery_room_number">Delivery room number</string>
    <string name="flat">Flat</string>
    <string name="delivery_floor">Delivery floor</string>
    <string name="building">Building</string>
    <string name="delivery_building">Delivery building</string>
    <string name="estate">Estate</string>
    <string name="delivery_estate">Delivery Estate</string>
    <string name="area">Area</string>
    <string name="h_k">H.K.</string>
    <string name="k_l">K.L.</string>
    <string name="n_t">N.T.</string>
    <string name="order_description">Order Description</string>
    <string name="enter_some_description_for_your_order_e_g_price_range">Enter some description for your order. E.g: price range…</string>
    <string name="pick">Pick</string>
    <string name="description_from_db">description from db</string>
    <string name="picker_name">Picker Name</string>
    <string name="picker_phone">Picker Phone</string>
    <string name="contact_picker">Contact Picker</string>
    <string name="toastEmptyName">You did not enter your name</string>
    <string name="toastEmptyPhone">You did not enter your phone number</string>
</resources>
