<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/orderImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_for_order"
            android:src="@drawable/order"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderCameraTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/take_a_picture_of_the_goods" />

            <ImageButton
                android:id="@+id/orderCameraButtom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/camera_icon"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderRoomTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room" />

            <EditText
                android:id="@+id/orderRoomETxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/delivery_room_number"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/orderFlatTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flat" />

            <EditText
                android:id="@+id/orderFlatETxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/delivery_floor"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderBuildingTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/building" />

            <EditText
                android:id="@+id/orderBuildingETxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/delivery_building"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderEstateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estate" />

            <EditText
                android:id="@+id/orderEstateETxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/delivery_estate"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />
        </LinearLayout>

        <TextView
            android:id="@+id/orderAreaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/orderAreaRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/orderRadioHK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h_k" />

            <RadioButton
                android:id="@+id/orderRadioKL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/k_l" />

            <RadioButton
                android:id="@+id/orderRadioNT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_t" />
        </RadioGroup>

        <TextView
            android:id="@+id/orderDescriptionTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_description"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/orderDescriptionETxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/enter_some_description_for_your_order_e_g_price_range"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/orderSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerSubmit"
            android:background="?android:attr/selectableItemBackground" />

    </LinearLayout>

</FrameLayout>